tests/algorithms/x/Pascal/neural_network/activation_functions/soboleva_modified_hyperbolic_tangent.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/neural_network/activation_functions/soboleva_modified_hyperbolic_tangent.pas
soboleva_modified_hyperbolic_tangent.pas(65,32) Error: Identifier not found "to_float"
soboleva_modified_hyperbolic_tangent.pas(97,3) Error: Identifier not found "json"
soboleva_modified_hyperbolic_tangent.pas(112) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
